<?xml version="1.0"?>
<package format="2">
  <name>icm20948</name>
  <version>1.0.0</version>
  <description>The icm20948 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="zhanzhihao_dt@163.com">Zhihao Zhan</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
